# gain

./: CMakeLists.txt  readme.md
inc/: gain.h
src/: gain.cpp
test/: CMakeLists.txt  test_gain.cpp
